# cs205-project-simple-matrix

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: simple_matrix.h  simple_matrix_exception.cpp  simple_matrix_exception.h  test1.cpp
test/: test1.cpp
